--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container py-5">
         <div class="row justify-content-center">
           <div class="col-12 col-md-6 col-lg-3">
-            <div class="mt-3" data-aos="fade-up"
+            <div class="mt-3 mb-5" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom" data-aos-duration="1000" >
              <div>
               <img src="./Images/illustration/images.jpg" alt="">
