donate btn change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <pre>       — Mother Teresa</pre>
             </blockquote>
             <div>
-              <a href="#" class="donate_btn2">DONATE <i class= "ps-2 fa-regular fa-heart"></i></a>
+              <a href="#" class="donate_btn2">About Us <i class= "ps-2 fa-regular fa-heart"></i></a>
             </div>
 
             </div>
